<resources>
    <string name="app_name">Snacks</string>
    <string name="lbl_comprar">COMPRAR</string>
    <string name="lbl_productos">PRODUCTOS</string>
    <string name="lbl_comprar_inicio">Comprar</string>
    <string name="lbl_comprar_huella">Captura de Huella</string>
    <string name="lbl_comprar_valor">Valor: </string>
    <string name="lbl_comprar_observacion">Observación: </string>
    <string name="lbl_confirmar_comprar">CONFIRMAR COMPRA</string>
    <string name="lbl_confirmar_nombre">Nombre: </string>
    <string name="lbl_nueva_compra">NUEVA COMPRA</string>
    <string name="lbl_valor">Valor</string>
    <string name="lbl_numero_cedula_confirmar">Número de cédula:</string>
    <string name="lbl_numero_cedula">Número de cédula</string>
    <string name="lbl_observaciones">Observaciones</string>
    <string name="lbl_continuar">CONTINUAR</string>
    <string name="lbl_ingresar_huella">INGRESAR HUELLA</string>
    <string name="lbl_cancelar">CANCELAR</string>
    <string name="lbl_registro_huella">REGISTRO DE HUELLA</string>
    <string name="lbl_registro_cedula">REGISTRO DE CÉDULA</string>
    <string name="lbl_registro">REGISTRO</string>
    <string name="idLblNumeroCedula">Cédula de Identidad</string>
    <string name="idLblNombrePersona">Cédula de Identidad</string>
    <string name="not_done">Not done yet</string>
    <string name="loading">Loading</string>
    <string name="preparing_device">Preparando el dispositivo, por favor espere...</string>
    <string name="closing_device">Device is closing, please wait…</string>
    <string name="enroll_success">Registro exitoso!!! El ID generado es : </string>
    <string name="enroll_failed_because_of_make_template">enroll_failed_because_of_make_template</string>
    <string name="enroll_failed_because_of_get_id">enroll_failed_because_of_get_id</string>
    <string name="enroll_failed_because_of_error">enroll_failed_because_of_error</string>
    <string name="mns_usuario_no_existe">Registre el usuario para continuar</string>
    <string name="mns_cedula_no_encontrada">Número de cédula no encontrada</string>
    <string name="mns_usuario_existe">El usuario ya se encuentra registrado!!!</string>
    <string name="mns_usuario_creado_exitosamente">El usuario ha sido creado exitosamente con ID </string>
    <string name="mns_error_creacion_usuario">Se ha producido un error al crer el usuario indicado</string>
    <string name="mns_ingrese_cedula">Ingrese un número de cédula</string>
    <string name="mns_ingrese_valor_menor_10">Ingrese un valor menor a 10$</string>
    <string name="mns_titulo">ZAIMELLA SNACKS</string>
    <string name="mns_ok">OK</string>
    <string name="mns_cancel">CANCEL</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
</resources>
