<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.zaimella.snacks.zaimellasnacks.ConfirmarCompraActivity"
              android:background="@drawable/img_nav_zai">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/lbl_confirmar_comprar"
        android:id="@+id/idComprarValor"
        android:textSize="15pt"
        android:textStyle="bold"
        android:paddingTop="90dp"
        android:textColor="#498054"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="10pt"
        android:textStyle="bold"
        android:id="@+id/idNombrePersona"
        android:textColor="#498054"
        android:text="@string/lbl_confirmar_nombre"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="10pt"
        android:textStyle="bold"
        android:id="@+id/idValorCompra"
        android:textColor="#498054"
        android:text="@string/lbl_comprar_valor"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="10pt"
        android:textStyle="bold"
        android:id="@+id/idObservacionesCompra"
        android:textColor="#498054"
        android:text="@string/lbl_comprar_observacion"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/imgConfirmarCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:onClick="btnConfirmarCompra"
            android:src="@drawable/btn_ok_p"/>

        <ImageButton
            android:id="@+id/imgConfirmarCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:onClick="btnCancelarCompra"
            android:src="@drawable/btn_home_p"/>

    </LinearLayout>

</LinearLayout>
